--- a/test_suite/cn_multielement/add_setup/setup.in
+++ b/test_suite/cn_multielement/add_setup/setup.in
@@ -14,6 +14,6 @@ RCOUT_3B = 5.0
 RCOUT_4B = 4.5
 
 ATOM_TYPES    = C,N
-PARAMETER_SET = 1086.4, 1420.3
+PROPERTY_SET = 1086.4, 1420.3
 LAMBDA_SET    = 1.4,1.09,1.34
 RCIN_LIST     = 0.98,0.86,0.90
