Allowed cross compatability with lambda set

--- a/test_suite/cn_multielement/add_setup/setup.in
+++ b/test_suite/cn_multielement/add_setup/setup.in
@@ -15,5 +15,5 @@ RCOUT_4B = 4.5
 
 ATOM_TYPES    = C,N
 PROPERTY_SET = 1086.4, 1420.3
-LAMBDA_SET    = 1.4,1.09,1.34
+#LAMBDA_SET    = 1.4,1.09,1.34
 RCIN_LIST     = 0.98,0.86,0.90
