--- a/test_suite/cn_multielement/add_setup/setup.in
+++ b/test_suite/cn_multielement/add_setup/setup.in
@@ -13,7 +13,12 @@ RCOUT_2B = 5.0
 RCOUT_3B = 5.0
 RCOUT_4B = 4.5
 
+################################
+##### System specific parameters for get_clusters.cpp
+##### Property_set should be equal to the number of elements, ensure consistent indexing
+################################
 ATOM_TYPES    = C,N
-PROPERTY_SET = 1086.4, 1420.3
-#LAMBDA_SET    = 1.4,1.09,1.34
+PROPERTY_SET  = 1086.4, 1420.3
 RCIN_LIST     = 0.98,0.86,0.90
+
+#########LAMBDA_SET    = 1.4,1.09,1.34
